[gd_scene load_steps=6 format=3 uid="uid://be7p50nqfy8ws"]

[ext_resource type="Texture2D" uid="uid://0j6fwfkvxkso" path="res://assets/UI/Hud.png" id="1_edgae"]
[ext_resource type="Script" uid="uid://dhqgdwunwe6n1" path="res://scripts/hud.gd" id="1_imv3k"]
[ext_resource type="Texture2D" uid="uid://b7rxxsvrsyquq" path="res://assets/UI/Full_Stamina.png" id="2_imv3k"]
[ext_resource type="Texture2D" uid="uid://cy7mg34ce33v8" path="res://assets/UI/Full_Mana.png" id="3_ihw3q"]
[ext_resource type="Texture2D" uid="uid://fvosmagcjaga" path="res://assets/UI/full_hp.png" id="4_rwrer"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_imv3k")

[node name="Hud" type="Sprite2D" parent="."]
position = Vector2(960, 982)
texture = ExtResource("1_edgae")

[node name="stamina_bar" type="TextureProgressBar" parent="."]
offset_left = 457.0
offset_top = 897.0
offset_right = 825.0
offset_bottom = 1025.0
step = 0.1
value = 100.0
fill_mode = 1
texture_progress = ExtResource("2_imv3k")

[node name="mana_bar" type="TextureProgressBar" parent="."]
offset_left = 1463.0
offset_top = 897.0
offset_right = 1831.0
offset_bottom = 1025.0
scale = Vector2(-1, 1)
step = 0.1
value = 100.0
fill_mode = 1
texture_progress = ExtResource("3_ihw3q")

[node name="hp_bar" type="TextureProgressBar" parent="."]
offset_left = 399.0
offset_top = 863.0
offset_right = 1521.0
offset_bottom = 1062.0
step = 0.1
value = 100.0
fill_mode = 3
texture_progress = ExtResource("4_rwrer")
